Bug 959451 - Resolve duplicate files: input_parser.js

--- a/apps/system/index.html
+++ b/apps/system/index.html
@@ -175,7 +175,7 @@
     <script defer src="js/value_selector/value_picker.js"></script>
     <script defer src="js/value_selector/spin_date_picker.js"></script>
     <script defer src="js/value_selector/value_selector.js"></script>
-    <script defer src="js/value_selector/input_parser.js"></script>
+    <script defer src="shared/js/input_parser.js"></script>
 
     <!-- Popup Manager -->
     <link rel="stylesheet" type="text/css" href="style/popup_manager/popup_manager.css">
