Bug 959357 - [Rocketbar] Add search icon to rocketbar r=pivanov

--- a/apps/system/index.html
+++ b/apps/system/index.html
@@ -346,7 +346,7 @@
     <script defer src="js/rocketbar.js"></script>
     <script defer src="js/title.js"></script>
     <script defer src="shared/js/url_helper.js"></script>
-    <link rel="stylesheet" type="text/css" href="style/rocketbar.css">
+    <link rel="stylesheet" type="text/css" href="style/rocketbar/rocketbar.css">
 
     <!-- Firefox Accounts-->
     <script defer src="js/fxa_manager.js"></script>
