Bug 941276 - [User Story] Browser: View URL web activity

--- a/apps/system/index.html
+++ b/apps/system/index.html
@@ -343,6 +343,7 @@
     <script defer src="js/dialercomms.js"></script>
 
     <!-- Rocketbar -->
+    <script defer src="js/browser.js"></script>
     <script defer src="js/rocketbar.js"></script>
     <script defer src="js/title.js"></script>
     <script defer src="shared/js/url_helper.js"></script>
