Bug 953237 - [FUGU][wifi]Support WAPI-CERT mode

--- a/apps/settings/elements/wifi_auth.html
+++ b/apps/settings/elements/wifi_auth.html
@@ -73,6 +73,22 @@
             </select>
           </span>
         </li>
+        <li class="wapi-as-certificate">
+          <p data-l10n-id="wapi-as-certificate">WAPI AS certificate</p>
+          <span class="button icon icon-dialog">
+            <select>
+              <option value="none">--</option>
+            </select>
+          </span>
+        </li>
+        <li class="wapi-user-certificate">
+          <p data-l10n-id="wapi-user-certificate">WAPI user certificate</p>
+          <span class="button icon icon-dialog">
+            <select>
+              <option value="none">--</option>
+            </select>
+          </span>
+        </li>
         <li class="description server-certificate-description">
           <p data-l10n-id="import-certificate-msg">
             Notice: If you need to import new certificates, please go to “Manage certificates".
