--- a/apps/settings/elements/wifi_join_hidden.html
+++ b/apps/settings/elements/wifi_join_hidden.html
@@ -24,6 +24,7 @@
               <option selected>WPA-PSK</option>
               <option>WPA-EAP</option>
               <option>WAPI-PSK</option>
+              <option>WAPI-CERT</option>
             </select>
           </span>
         </li>
@@ -73,6 +74,22 @@
         </li>
         <li class="server-certificate">
           <p data-l10n-id="server-certificate">Server certificate</p>
+          <span class="button icon icon-dialog">
+            <select>
+              <option value="none">--</option>
+            </select>
+          </span>
+        </li>
+        <li class="wapi-as-certificate">
+          <p data-l10n-id="wapi-as-certificate">WAPI AS certificate</p>
+          <span class="button icon icon-dialog">
+            <select>
+              <option value="none">--</option>
+            </select>
+          </span>
+        </li>
+        <li class="wapi-user-certificate">
+          <p data-l10n-id="wapi-user-certificate">WAPI user certificate</p>
           <span class="button icon icon-dialog">
             <select>
               <option value="none">--</option>
