WIP Bug 959694 Combine statusbar and Rocketbar.

--- a/apps/system/index.html
+++ b/apps/system/index.html
@@ -345,7 +345,6 @@
     <!-- Rocketbar -->
     <script defer src="js/browser.js"></script>
     <script defer src="js/rocketbar.js"></script>
-    <script defer src="js/title.js"></script>
     <script defer src="shared/js/url_helper.js"></script>
     <link rel="stylesheet" type="text/css" href="style/rocketbar/rocketbar.css">
 
@@ -420,8 +419,13 @@
       </div>
 
       <div id="statusbar" data-z-index-level="statusbar">
-        <!-- Browser chrome title-->
-        <div id="statusbar-title"></div>
+        <!-- Rocketbar -->
+        <form id="rocketbar">
+          <input id="rocketbar-input" type="text" x-inputmode="verbatim"
+            placeholder="Search or type address" data-l10n-id="search-or-type-address"></input>
+          <button id="rocketbar-reset" type="reset" class="hidden">x</button>
+          <button id="rocketbar-cancel" data-l10n-id="cancel" type="button">Cancel</button>
+        </form>
 
         <div id="statusbar-icons">
           <!-- Time -->
@@ -470,18 +474,7 @@
             data-num="" hidden></div>
         </div>
       </div>
-      <div id="search-bar" data-z-index-level="search-bar">
-        <form id="search-form" class="skin-dark">
-          <p>
-            <input id="search-input" type="search" x-inputmode="verbatim" placeholder="Search or type address" data-l10n-id="search-or-type-address"></input>
-            <button id="search-reset" type="reset"></button>
-            <a href="#" id="search-cancel">
-                <span data-l10n-id="cancel">Cancel</span>
-            </a>
-          </p>
-        </form>
-        <div id="search-container"></div>
-      </div>
+      <div id="rocketbar-results" data-z-index-level="rocketbar-results" class="hidden"></div>
 
       <div id="utility-tray" data-z-index-level="utility-tray">
         <!-- notifications -->
