--- a/apps/settings/elements/simpin_dialog.html
+++ b/apps/settings/elements/simpin_dialog.html
@@ -16,7 +16,8 @@
         <div class="sim-messageHeader"></div>
         <span class="sim-messageBody"></span>
       </div>
-      <div class="sim-triesLeft" data-l10-id="inputCodeRetriesLeft" hidden></div>
+      <div class="sim-triesLeft" hidden
+          data-l10n-id="inputCodeRetriesLeft" data-l10n-args='{ "n": 2 }'></div>
 
       <div class="sim-code-area sim-pinArea">
         <div data-l10n-id="simPin">SIM PIN</div>
