Bug 920011 - Dialing from call log
- Introduced a CallButton abstraction (useful when we do DSDS)
- Remove un-viewable CSS transitions in Call log edit mode
- Remove support for contact photo
- Remove call button in phone action menu
- Added a bit of jshint compatibility

--- a/apps/communications/dialer/index.html
+++ b/apps/communications/dialer/index.html
@@ -25,6 +25,7 @@
     <script defer src="/dialer/js/index.js"></script>
     <script defer src="/dialer/js/utils.js"></script>
     <script defer src="/dialer/js/tone_player.js"></script>
+    <script defer src="/dialer/js/call_button.js"></script>
     <script defer src="/dialer/js/keypad.js"></script>
     <script defer src="/dialer/js/dialer.js"></script>
     <script defer src="/dialer/js/call_log_db.js"></script>
@@ -192,7 +193,7 @@
               <span role="button" id="keypad-callbar-add-contact" data-type="action" data-value="add-contact" class="disabled">
                 <div class="icon-add-contact"></div>
               </span>
-              <span role="button" id="keypad-callbar-call-action" data-type="action" data-value="make-call">
+              <span role="button" id="keypad-callbar-call-action" data-type="action" data-value="make-call" class="call-button">
                 <div>
                 </div>
               </span>
