--- a/apps/system/fxa/fxa_module.html
+++ b/apps/system/fxa/fxa_module.html
@@ -10,7 +10,7 @@
     <link href="../shared/style_unstable/progress_activity.css" rel="stylesheet" type="text/css">
     <link href="style/fxa.css" rel="stylesheet" type="text/css">
 
-    <link rel="resource" type="application/l10n" href="locales/locales-fxa.ini" />
+    <link rel="resource" type="application/l10n" href="locales.ini" />
 
     <link rel="import" href="elements/fxa-email.html">
 
