Bug 952063 - Trigger FxAccountsIACHelper 'onlogin', 'onloginverified' and 'onlogout' events when required. r=alive
Address Alive review comments

--- a/test_apps/test-fxa-client/index.html
+++ b/test_apps/test-fxa-client/index.html
@@ -17,10 +17,14 @@
         <button id="logout">Logout</button>
         <button id="changePassword" disabled>ChangePassword</button>
       </menu>
-      
+
       <section id="result">
-        <h1> RESULT:</h1>
+        <h1>RESULT:</h1>
         <p id="result-text"></p>
+      </section>
+
+      <section id="events">
+        <p id="events-text"></p>
       </section>
     </section>
     <!-- Progress overlay -->
