Bug 939174 - [user story] edge gesture tutorial outside of FTE

--- a/apps/communications/ftu/index.html
+++ b/apps/communications/ftu/index.html
@@ -608,6 +608,26 @@
     </section>
   </section>
 
+  <section id="update-screen" class="finish-screen-base" role="region">
+    <section class="content">
+      <h1 data-l10n-id="whatsNew">
+        What's new
+      </h1>
+      <p data-l10n-id="updatedSuccessfully">
+        Your phone has updated successfully! Start the tour to find out more about the new features.
+      </p>
+      </section>
+      <menu role="navigation">
+        <button id="update-skip-tutorial-button" class="button-left" data-l10n-id="skip">
+          Skip
+        </button>
+        <button id="update-lets-go-button" class="recommend" data-l10n-id="startTour">
+          Start Tour!
+        </button>
+      </menu>
+    </section>
+  </section>
+
   <section id="tutorial-screen" class="tutorial-screen-base" role="region">
     <ol id="tutorial-progress" class="step-state">
       <li>step 1</li>
