--- a/apps/system/index.html
+++ b/apps/system/index.html
@@ -9,8 +9,8 @@
     <script src="shared/js/l10n_date.js"></script>
     <script src="shared/js/idletimer.js"></script>
     <script src="shared/js/dump.js"></script>
-    <script src="shared/js/settings_listener.js"></script>
     <script defer src="shared/js/gesture_detector.js"></script>
+    <script defer src="shared/js/settings_listener.js"></script>
     <script defer src="shared/js/custom_dialog.js"></script>
     <script defer src="shared/js/notification_helper.js"></script>
     <script defer src="shared/js/async_storage.js"></script>
