Bug 944613 [Settings] The \"SIM manager" should be \"SIM Manager\"

--- a/apps/settings/index.html
+++ b/apps/settings/index.html
@@ -350,7 +350,7 @@
           </li>
           <li id="simCardManager-settings" aria-disabled="true" hidden>
             <small id="simmanager-desc" class="menu-item-desc"></small>
-            <a id="menuItem-simManager" class="menu-item" href="#sim-manager" data-l10n-id="simManager">SIM manager</a>
+            <a id="menuItem-simManager" class="menu-item" href="#sim-manager" data-l10n-id="simManager">SIM Manager</a>
           </li>
           <li id="call-settings" aria-disabled="true">
             <small id="call-desc" class="menu-item-desc"></small>
