--- a/apps/system/index.html
+++ b/apps/system/index.html
@@ -1047,7 +1047,7 @@
               <div id="lockscreen-conn-states" hidden></div>
               <div id="lockscreen-mute" hidden></div>
               <div id="lockscreen-alt-camera" class="lockscreen-icon">
-                <div role="button" data-l10n-id="camera-a11y-button" aria-label="Camera"></div>
+                <div id="lockscreen-alt-camera-button" role="button" data-l10n-id="camera-a11y-button" aria-label="Camera"></div>
               </div>
               <div class="lockscreen-clock">
                 <span id="lockscreen-clock-numbers"></span>
