Fixing a typo: datadata-l10n-id > data-l10n-id

--- a/apps/clock/index.html
+++ b/apps/clock/index.html
@@ -82,7 +82,7 @@
               </menu>
             </div>
             <div id="timer-plus-time">
-              <a href="#timer-panel" id="timer-plus" data-value="60" datadata-l10n-id="plusMinute">
+              <a href="#timer-panel" id="timer-plus" data-value="60" data-l10n-id="plusMinute">
                 +1 Min
               </a>
             </div>
