Bug 960660 - Add icons and fix layout of places search results in rocketbar. r=kgrandon

--- a/apps/browser/index.html
+++ b/apps/browser/index.html
@@ -35,7 +35,7 @@
     <script defer src="js/nfc.js"></script>
     <script defer src="js/browser_db.js"></script>
     <script defer src="js/toolbar.js"></script>
-    <script defer src="js/utilities.js"></script>
+    <script defer src="shared/js/utilities.js"></script>
     <script defer src="shared/js/url_helper.js"></script>
 
     <!-- Resources -->
