--- a/apps/search/index.html
+++ b/apps/search/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1.0">
     <link rel="stylesheet" href="style/search.css">
     <script defer src="shared/js/url_helper.js"></script>
+    <script defer src="shared/js/utilities.js"></script>
     <script defer src="js/search.js"></script>
     <script defer src="js/eme/eme.js"></script>
     <script defer src="js/eme/api.js"></script>
