Bug 960933 - Show app debug information in a devtools overlay. r=vingtetun

--- a/apps/system/index.html
+++ b/apps/system/index.html
@@ -314,6 +314,10 @@
     <script defer src="js/visibility_manager.js"></script>
     <script defer src="js/layout_manager.js"></script>
 
+    <!-- Devtools -->
+    <link rel="stylesheet" type="text/css" href="style/devtools_layers.css">
+    <script defer src="js/devtools_layers.js"></script>
+
     <!-- Edge Gestures -->
     <script defer src="js/stack_manager.js"></script>
     <script defer src="js/sheets_transition.js"></script>
