--- a/apps/system/index.html
+++ b/apps/system/index.html
@@ -85,6 +85,7 @@
     <script defer src="js/system_banner.js"></script>
     <script defer src="js/system_dialog.js"></script>
     <script defer src="js/home_gesture.js"></script>
+    <script defer src="js/wallpaper.js"></script>
     <!-- Grid View -->
     <link rel="stylesheet" type="text/css" href="style/gridview/gridview.css">
     <script defer src="js/gridview.js"></script>
