--- a/apps/system/index.html
+++ b/apps/system/index.html
@@ -29,9 +29,12 @@
     <script defer src="shared/js/keyboard_helper.js"></script>
     <script defer src="shared/js/template.js"></script>
     -->
+
     <!-- SIMSlot -->
     <script type="text/javascript" defer src="js/simslot.js"></script>
     <script type="text/javascript" defer src="js/simslot_manager.js"></script>
+    <script type="text/javascript" defer src="js/sim_settings_helper.js"></script>
+
 
     <!-- Wrapper -->
     <link rel="stylesheet" type="text/css" href="style/wrapper/wrapper.css">
