Bug 963991 - Move rocketbar into an app window

--- a/apps/system/index.html
+++ b/apps/system/index.html
@@ -342,6 +342,7 @@
 
     <!-- Rocketbar -->
     <script defer src="js/rocketbar.js"></script>
+    <script defer src="js/rocketbar_launcher.js"></script>
     <script defer src="js/title.js"></script>
     <script defer src="shared/js/url_helper.js"></script>
     <link rel="stylesheet" type="text/css" href="style/rocketbar/rocketbar.css">
