Bug 950940 - [Calendar] adding a google calendar has the header in blackish color (which doesn't match the color scheme)

--- a/apps/calendar/index.html
+++ b/apps/calendar/index.html
@@ -167,7 +167,7 @@
 <section is="advanced-settings" class="fullscreen-view in-progress skin-organic" role="region" id="advanced-settings-view"></section>
 <section is="modify-event" class="fullscreen-view" id="modify-event-view" role="region"></section>
 <section is="show-event" class="fullscreen-view" id="event-view" role="region"></section>
-<section is="oauth" class="fullscreen-view skin-dark" id="oauth2" role="region"></section>
+<section is="oauth" class="fullscreen-view skin-organic" id="oauth2" role="region"></section>
 <section is="modify-account" class="fullscreen-view skin-organic" id="modify-account-view" role="region">
 
 </body>
