--- a/apps/settings/elements/display.html
+++ b/apps/settings/elements/display.html
@@ -37,6 +37,7 @@
           <label class="range-icons brightness">
             <input aria-labelledby="brightness-heading" type="range" name="screen.brightness" step="0.01" min="0.1" value="0.5" max="1" />
           </label>
+          <small id= "brightness-manual-level" data-l10n-id="brightness-level-percent"></small>
         </li>
         <li id="screen-timeout">
           <p data-l10n-id="screen-timeout">Screen Timeout</p>
